~ iconof licenses in about screen && + title

--- a/trunk/ddscanner/app/src/main/assets/open_source_licenses.html
+++ b/trunk/ddscanner/app/src/main/assets/open_source_licenses.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-
+The following sets may be contained in proportions of Deep Dive Scanner product
 <ul>
     <li>
         <b>Gson</b>
